index login adaptation / bugs